Fri May 10 01:34:46 1996  Richard Basch  <basch@lehman.com>

	* configure.in cryptoconf.c des3_sha.c:
	Support enctype-des3-sha, cksum-sha, cksum-sha-des3

	* Removed des3_md5.c (and all des3-md5 support).

Tue Apr 30 00:38:14 1996  Ken Raeburn  <raeburn@cygnus.com>

	* Makefile.in (libcrypto.$(STEXT)): Remove before creating.

Thu May  2 18:48:35 1996  Richard Basch  <basch@lehman.com>

	* des3_md5.c des3_raw.c: use the new common random routines for
		des & des3 (the old des3 routines have been removed)

Sat Mar 30 22:52:46 1996  Theodore Y. Ts'o  <tytso@dcl>

	* cryptoconf.c: Fixed comments describing the various checksum
	        types.  (Added numbers, and fixed a mistake in a
		description of an undefined checksum type.)

Thu Mar 28 09:49:08 1996  Richard Basch  <basch@lehman.com>

	* cryptoconf.c: Added support for CKSUMTYPE_RSA_MD5_DES3 and
		ENCTYPE_DES3_CBC_RAW

	* des3_md5.c: Abstraction correction: use sizeof(mit_des3_cblock)

	* configure.in:
		Cosmetic renaming of des-cbc-raw configuration vars.
		Added support for des3-cbc-raw.

	* des3_raw.c: New file (support ENCTYPE_DES3_CBC_RAW)

Mon Mar 11 10:59:40 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* des_crc.c (mit_des_crc_decrypt_func): Add const to pointer
		cast for suncc warning.

Wed Feb  7 00:23:18 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Folded in danw's changes to allow
		building Makefiles for the Macintosh.  We now can build
		MPW makefiles which are interpreted by CodeWarrior.

Mon Nov 13 11:30:10 1995  Theodore Y. Ts'o  <tytso@dcl>

	* encrypt_data.c (krb5_encrypt_data): New file.  A generic routine
		for encrypting data in a krb5_data structure.  Fills in a
		krb5_enc_data structure.

	* decrypt_data.c (krb5_decrypt_data): New file.  A generic routine
		for decrypting data in a krb5_enc_data structure.  Fills
		in a krb5_data structure.

	* Makefile.in (SRCS): Added decrypt_data.c and encrypt_data.c to
		list of files to be compiled.
